mixer/adapter/mygrpcadapter/deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: mygrpcadapter
  name: mygrpcadapter
  namespace: istio-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mygrpcadapter
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: mygrpcadapter
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      containers:
      - image: gabbi/mygrpcadapter:0.0.3
        imagePullPolicy: Always
        name: mygrpcadapter
        resources: {}
        ports:
        - containerPort: 4225
status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: mygrpcadapter
  namespace: istio-system
  labels:
    app: mygrpcadapter
spec:
  type: ClusterIP
  ports:
  - name: grpc
    protocol: TCP
    port: 44225
    targetPort: 44225
  selector:
    app: mygrpcadapter
