mixer/adapter/mygrpcadapter/deployment/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: redis
  name: redis
  namespace: passport
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: redis
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      containers:
        - image: redis:5.0.6
          name: redis
          resources: {}
          ports:
            - containerPort: 6379
status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: passport
  labels:
    app: redis
spec:
  type: ClusterIP
  ports:
    - name: redis
      protocol: TCP
      port: 6379
      targetPort: 6379
  selector:
    app: redis
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: redis
  namespace: passport
spec:
  host: "redis.passport.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: DISABLE
